# skillful-agent

./: .gitignore  CLAUDE.md  Example.py  README.md  main.py  pyproject.toml  run_server.py
docs/superpowers/plans/: 2026-04-08-agent-layer-upgrade.md
docs/superpowers/specs/: 2026-04-08-agent-layer-upgrade-design.md
native-skills/learner/: SKILL.md
native-skills/learner/references/: skill-conventions.md
native-skills/learner/scripts/: list_skill_tree.py  save_doc.py  scaffold_skill.py  write_skill_content.py
native-skills/web-search/: SKILL.md  search_query_australia.json  search_query_brazil.json  search_query_canada.json  search_query_egypt.json  search_query_germany.json  search_query_india.json  search_query_japan.json  search_query_new_zealand.json  search_query_norway.json  search_query_south_africa.json
native-skills/web-search/evals/: evals.json
native-skills/web-search/scripts/: fetch.py  search.py
server/: __init__.py  app.py  config.py  dependencies.py  models.py
server/routes/: __init__.py  agent.py  health.py  runs.py  skills.py  threads.py
server/services/: archive.py  sse.py
skill_agent/: __init__.py  agent.py  context_tools.py  inbox.py  inbox_tools.py  messages.py  models.py  registry.py  skill_tools.py  stream.py  subagent.py  system_prompt.md  thread_tools.py  threads.py  user_prompt_files.py
skill_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
skills/wikipedia/: SKILL.md
skills/wikipedia/scripts/: geosearch.py  search.py  summary.py
skills/wikipedia_lookup/: SKILL.md
skills/wikipedia_lookup/scripts/: lookup.py
tests/: conftest.py  test_agent_endpoints.py  test_agent_run_queue.py  test_agent_skill_reload.py  test_agent_stores.py  test_config.py  test_context_tools.py  test_gaps.py  test_inbox.py  test_inbox_tools.py  test_integration.py  test_messages.py  test_server_cors.py  test_skill_loaded_event.py  test_subagent.py  test_thread_tools.py  test_threads.py  test_write_user_file.py
