[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-agent"
version = "0.1.0"
description = "A pydantic-ai based SDK for building AI agents with progressive skill disclosure."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-ai-slim[duckduckgo,exa,openrouter,tavily,web]>=1.73.0",
    "pydantic-ai[a2a,dbos,examples,outlines-llamacpp,outlines-mlxlm,outlines-sglang,outlines-transformers,outlines-vllm-offline,prefect,sentence-transformers,voyageai]>=1.73.0",
    "python-dotenv",
]

[project.optional-dependencies]
# Dependencies for the example wikipedia_lookup skill
examples = ["wikipedia-api>=0.8.0"]
# PDF text extraction for run(..., files=[...]) and user_prompt_files
pdf = ["pdfplumber>=0.11.0"]
# Server dependencies
server = [
    "azure-identity>=1.15.0",
    "azure-keyvault-secrets>=4.8.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]

# Only ship the SDK and server packages (exclude sibling dirs like data/, native-skills/).
[tool.setuptools.packages.find]
where = ["."]
include = ["skill_agent*", "server*"]

[tool.setuptools.package-data]
skill_agent = ["*.md"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
